--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cursor-to-openai",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Cursor to OpenAPI",
   "author": "JiuZ-Chn",
   "private": false,
@@ -8,19 +8,17 @@
   "url": "https://github.com/JiuZ-Chn/Cursor-To-OpenAI",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.7",
     "express": "4.21.2",
     "morgan": "^1.10.0",
     "protobufjs": "^7.4.0",
+    "undici": "^7.4.0",
     "uuid": "11.0.5"
   },
   "scripts": {
     "proto": "npx pbjs -t static-module -w commonjs -o src/proto/message.js src/proto/message.proto",
     "start": "node src/app.js"
-
   },
   "devDependencies": {
     "protobufjs-cli": "^1.1.3"
   }
-
 }
