--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -6,11 +6,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  MAJOR: 0
-  MINOR: 0
-  PATCH: ${{github.run_number}}
 
-run-name: Publish Docker Image v1.0.${{github.run_number}}
+run-name: Publish Docker Image v1.0.0-github.${{github.run_number}}
 
 jobs:
   build-and-push-image:
@@ -44,7 +41,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=v${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}
+            type=raw,value=v1.0.0-github.${{github.run_number}}
 
       # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
       # It uses the `context` parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the `docker/build-push-action` repository.
